ckad/services/02/ingress-test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ingress-test-pod
  labels:
    app: ingress-test
spec:
  containers:
    - name: nginx
      image: nginx:stable
      ports:
        - containerPort: 80
