ckad/services/02/ingress-test-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-service
spec:
  type: ClusterIP
  selector:
    app: ingress-test
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
